# hmacsha256-aes

./: CMakeLists.txt  README.md  main.cpp
cryptography/: aes-key.txt  hmac-key.txt
exes/: client.cpp  server.cpp
inc/: crypto.hpp
lib/: crypto.cpp
